fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ body {
 		background: #fff;
 		color: #555f66;
 		cursor: default;
-		height: 3.5em;
+		height: 3em;
 		left: 0;
 		line-height: 3em;
 		position: fixed;
